--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 #menuNav #language {
   font-weight: 100;
-  font-size: 14px;
+  font-size: 87.5%;
   display: flex;
   align-items: center;
 }
@@ -37,32 +37,32 @@ main {
   align-items: center;
 }
 main #profilePicture1 {
-  width: 172px;
-  height: 172px;
-  margin-top: 16px;
+  width: 52.5%;
+  height: 52.5%;
+  margin-top: 4.87%;
   border-radius: 50%;
   -webkit-filter: saturate(80%) sepia(20%) hue-rotate(0deg);
   filter: saturate(80%) sepia(20%) hue-rotate(0deg);
 }
 main #nameAndRole {
-  width: 172px;
-  margin-top: 54px;
+  width: 52.5%;
+  margin-top: 16.46%;
   flex-direction: column;
   display: flex;
   text-align: center;
 }
 main #nameAndRole #name {
-  font-size: 18px;
+  font-size: 112.5%;
 }
 main #nameAndRole #role {
-  font-size: 14px;
+  font-size: 87.5%;
   font-weight: 100;
-  margin-top: 12px;
+  margin-top: 6.96%;
 }
 main #meetMe {
-  margin: 46px auto;
-  width: 128px;
-  height: 64px;
+  margin: 14.02% auto;
+  width: 39.02%;
+  padding: 6.75% 0;
   background: transparent;
   border: 1px solid #f7f7ff;
   color: #f7f7ff;
@@ -72,11 +72,11 @@ main #meetMe:active {
   color: black;
 }
 main #quote {
-  width: 189.2px;
+  width: 78.75%;
   display: flex;
   flex-direction: column;
   text-align: center;
-  font-size: 12px;
+  font-size: 87.5%;
 }
 
 /*# sourceMappingURL=main.css.map */
