--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -39,7 +39,7 @@ main {
 main #profilePicture1 {
   width: 52.5%;
   height: 52.5%;
-  margin-top: 4.87%;
+  margin-top: 16.87%;
   border-radius: 50%;
   -webkit-filter: saturate(80%) sepia(20%) hue-rotate(0deg);
   filter: saturate(80%) sepia(20%) hue-rotate(0deg);
@@ -76,6 +76,86 @@ main #quote {
   display: flex;
   flex-direction: column;
   text-align: center;
+  font-size: 87.5%;
+}
+
+#menuToggle {
+  display: block;
+  position: relative;
+  top: 0;
+  left: 0;
+  padding: 6px 0 0 6px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+#menuToggle a {
+  text-decoration: none;
+  color: black;
+  transition: color 0.3s ease;
+}
+#menuToggle input {
+  display: block;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+  /* and place it over the hamburger */
+  -webkit-touch-callout: none;
+}
+#menuToggle span {
+  display: block;
+  width: 20px;
+  height: 1px;
+  margin: 7px 0;
+  position: relative;
+  background: #f7f7ff;
+  z-index: 1;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+#menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(50deg) translate(2px, 2px);
+  background: black;
+}
+#menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+#menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-40deg) translate(2px, -2px);
+}
+#menuToggle input:checked ~ ul {
+  transform: none;
+}
+
+#menu {
+  position: fixed;
+  width: 100%;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  background: #f7f7ff;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+#menu li {
+  padding: 10px 0;
+  width: 100%;
   font-size: 87.5%;
 }
 
