--- a/webapp/scss/main.scss
+++ b/webapp/scss/main.scss
@@ -48,7 +48,7 @@ main {
   #profilePicture1 {
     width: $first-impression-dimension;
     height: $first-impression-dimension;
-    margin-top: 4.87%;
+    margin-top: 16.87%;
     border-radius: 50%;
     -webkit-filter: saturate(80%) sepia(20%) hue-rotate(0deg); 
     filter: saturate(80%) sepia(20%) hue-rotate(0deg); 
@@ -94,3 +94,99 @@ main {
     font-size: fonts.$font-size + 12.5%;
   }
 }
+
+// Menu Toggle
+#menuToggle {
+  display: block;
+  position: relative;
+  top: 0;
+  left: 0;
+  padding: 6px 0 0 6px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+
+  a {
+    text-decoration: none;
+    color: colors.$primary-color;
+    transition: color 0.3s ease;
+  }
+
+  input {
+    display: block;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2; /* and place it over the hamburger */
+    -webkit-touch-callout: none;
+  }
+
+  span {
+    display: block;
+    width: 20px;
+    height: 1px;
+    margin: 7px 0;
+    position: relative;
+    background: colors.$secondary-color;
+    z-index: 1;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+  }
+
+  span:first-child {
+    transform-origin: 0% 0%;
+  }
+
+  span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+
+  input:checked ~ span {
+    opacity: 1;
+    transform: rotate(50deg) translate(2px, 2px);
+    background: colors.$primary-color;
+  }
+
+  input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+
+  input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-40deg) translate(2px, -2px);
+  }
+
+  input:checked ~ ul {
+    transform: none;
+  }
+
+}
+
+#menu {
+  position: fixed;
+  width: 100%;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  background: colors.$secondary-color;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+
+  li {
+    padding: 10px 0;
+    width: 100%;
+    font-size: fonts.$font-size + 12.5%;
+  }
+}
+
