--- a/webapp/scss/_menu.scss
+++ b/webapp/scss/_menu.scss
@@ -70,26 +70,27 @@
   }
 
   input:checked ~ ul {
-    transform: none;
+    transform: translate(100%, 0);
   }
 
 }
 
 #menu {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  margin: -100px 0 0 -50px;
-  padding: 50px;
-  padding-top: 125px;
+  margin: 0 0 0 -100%;
+  padding: 75px 0px 50px 0px;
   background: colors.$secondary-color;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
-  transform: translate(-100%, 0);
+  transform: none;
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 
   li {
-    padding: 10px 0;
+    padding: 10px 25px;
     width: 100%;
     font-size: fonts.$font-size + 12.5%;
   }
