fix(first_impression): 'X' animation not being transformed properly

--- a/webapp/scss/_menu.scss
+++ b/webapp/scss/_menu.scss
@@ -21,11 +21,11 @@
 
   input {
     display: block;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     position: absolute;
-    top: -7px;
-    left: -5px;
+    top: 2px;
+    left: 2px;
     cursor: pointer;
     opacity: 0;
     z-index: 2;
@@ -46,28 +46,50 @@
                 opacity 0.55s ease;
   }
 
-  span:first-child {
-    transform-origin: 0% 0%;
-  }
+  // span:first-child {
+  //   transform-origin: 0% 0%;
+  // }
 
-  span:nth-last-child(2) {
-    transform-origin: 0% 100%;
-  }
+  // span:nth-last-child(2) {
+  //   transform-origin: 0% 100%;
+  // }
 
-  input:checked ~ span {
-    opacity: 1;
-    transform: rotate(50deg) translate(2px, 2px);
-    background: colors.$primary-color;
-  }
-
-  input:checked ~ span:nth-last-child(3) {
+  input:checked ~ span:nth-child(3) { 
     opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
+    background: transparent;
   }
 
-  input:checked ~ span:nth-last-child(2) {
-    transform: rotate(-40deg) translate(2px, -2px);
+  input:checked ~ span:nth-child(2) { 
+    background: colors.$primary-color;
+    transform-origin: 0 0;
+    transform: scale(1.1) rotate(45deg);
   }
+  input:checked ~ span:nth-child(4) { 
+    background: colors.$primary-color;
+    transform-origin: 0 0;
+    transform: scale(1.1) rotate(-45deg);
+  }
+
+  // input:checked ~ span {
+  //   opacity: 1;
+  //   transform: rotate(50deg) ;
+  //   background: colors.$primary-color;
+  // }
+
+  // input:checked ~ span:nth-child(3) {
+  //   opacity: 1;
+  //   transform: rotate(-50deg) ;
+  //   background: colors.$primary-color;
+  // }
+
+  // input:checked ~ span:nth-last-child(3) {
+  //   opacity: 0;
+  //   transform: rotate(0deg) scale(0.2, 0.2);
+  // }
+
+  // input:checked ~ span:nth-last-child(2) {
+  //   transform: rotate(-40deg) translate(2px, -2px);
+  // }
 
   input:checked ~ ul {
     transform: translate(100%, 0);
