--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -16,11 +16,11 @@
 }
 #menuToggle input {
   display: block;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   position: absolute;
-  top: -7px;
-  left: -5px;
+  top: 2px;
+  left: 2px;
   cursor: pointer;
   opacity: 0;
   z-index: 2;
@@ -37,23 +37,19 @@
   transform-origin: 4px 0px;
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
 }
-#menuToggle span:first-child {
-  transform-origin: 0% 0%;
-}
-#menuToggle span:nth-last-child(2) {
-  transform-origin: 0% 100%;
-}
-#menuToggle input:checked ~ span {
-  opacity: 1;
-  transform: rotate(50deg) translate(2px, 2px);
-  background: black;
-}
-#menuToggle input:checked ~ span:nth-last-child(3) {
+#menuToggle input:checked ~ span:nth-child(3) {
   opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
+  background: transparent;
 }
-#menuToggle input:checked ~ span:nth-last-child(2) {
-  transform: rotate(-40deg) translate(2px, -2px);
+#menuToggle input:checked ~ span:nth-child(2) {
+  background: black;
+  transform-origin: 0 0;
+  transform: scale(1.1) rotate(45deg);
+}
+#menuToggle input:checked ~ span:nth-child(4) {
+  background: black;
+  transform-origin: 0 0;
+  transform: scale(1.1) rotate(-45deg);
 }
 #menuToggle input:checked ~ ul {
   transform: translate(100%, 0);
