feat(first_impressions): adjust padding in language option

--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -96,6 +96,7 @@ body {
   font-size: 87.5%;
   display: flex;
   align-items: center;
+  padding-right: 4px;
 }
 #menuNav button {
   background: transparent;
