--- a/webapp/scss/main.scss
+++ b/webapp/scss/main.scss
@@ -26,6 +26,7 @@ body {
     font-size: fonts.$font-size + 12.5%;
     display: flex;
     align-items: center;
+    padding-right: 4px;
   }
 
   button {
