--- a/webapp/scss/_menu.scss
+++ b/webapp/scss/_menu.scss
@@ -1,6 +1,31 @@
 @use 'fonts';
 @use 'colors';
 
+#menuNav {
+  display: flex;
+  justify-content: space-between;
+
+  #language {
+    font-weight: 100;
+    font-size: 0.87rem;
+    display: flex;
+    align-items: center;
+    padding-right: 4px;
+  }
+
+  button {
+    background: transparent;
+    width: 32px;
+    border: none;
+    cursor: pointer;
+  }
+
+  #arrowIcon {
+    transform: rotate(180deg);
+  }
+
+}
+
 #menuToggle {
   display: block;
   position: relative;
