--- a/webapp/scss/main.scss
+++ b/webapp/scss/main.scss
@@ -2,6 +2,7 @@
 @use 'colors';
 @use 'menu';
 @use 'firstimpression';
+@use 'about';
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 
@@ -11,13 +12,11 @@
   font-family: fonts.$font-stack;
 }
 
-body {
-}
-
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 nav {
@@ -29,6 +28,7 @@ nav {
 
 section {
   padding-bottom: 10%;
+  width: 100%;
 }
 
 
