--- a/webapp/scss/_about.scss
+++ b/webapp/scss/_about.scss
@@ -2,7 +2,8 @@
 
 #aboutSection {
 
-  padding: 13px;
+  padding-top: 10%;
+  border: 1px solid black;
 
   #skills {
     display: flex;
@@ -22,9 +23,10 @@
       text-align: center;
       font-size: 0.87rem;
       font-size: 3.4vw;
+      width: 100%;
 
       img {
-        width: 64px;
+        width: 40%;
         height: 64px;
       }
 
@@ -36,7 +38,7 @@
       }
 
       p {
-        width: 150px;
+        width: 80%;
       }
 
     }
