feat(menu): change toggle duration

--- a/webapp/scss/_menu.scss
+++ b/webapp/scss/_menu.scss
@@ -1,6 +1,8 @@
 @use 'fonts';
 @use 'colors';
 
+$toggle-duration: 0.3s;
+
 #menuNav {
   display: flex;
   justify-content: space-between;
@@ -64,9 +66,9 @@
     background: colors.$secondary-color;
     z-index: 1;
     transform-origin: 4px 0px;
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                opacity 0.55s ease;
+    transition: transform $toggle-duration cubic-bezier(0.77,0.2,0.05,1.0),
+                background $toggle-duration cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity $toggle-duration ease;
   }
 
   input:checked ~ span:nth-child(3) { 
@@ -102,7 +104,7 @@
   -webkit-font-smoothing: antialiased;
   transform-origin: 0% 0%;
   transform: none;
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  transition: transform $toggle-duration cubic-bezier(0.77,0.2,0.05,1.0);
 
   li {
     padding: 10px 25px;
