--- a/webapp/scss/_about.scss
+++ b/webapp/scss/_about.scss
@@ -14,6 +14,7 @@
 
 #aboutSection {
   padding-top: 10%;
+  background: colors.$secondary-color;
 }
 
 #skillsSubsection {
@@ -66,5 +67,34 @@
     border-radius: 50%;
     -webkit-filter: saturate(80%) sepia(20%) hue-rotate(0deg); 
     filter: saturate(80%) sepia(20%) hue-rotate(0deg); 
+  }
+}
+
+.chips-section {
+
+  margin: 26px 16px 0 16px;
+  font-size: 0.87rem;
+  font-size: 3.9vw;
+
+  .chips-title {
+    color: colors.$third-color;
+  }
+
+  .chips {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+
+    span {
+      display: flex;
+      margin: 13px 13px 0px 0;
+      padding: 8px;
+      background: colors.$third-color;
+      border-radius: 24px;
+      color: colors.$secondary-color;
+      font-size: 0.75rem;
+      font-size: 3.4vw;
+    }
   }
 }
