--- a/webapp/scss/main.scss
+++ b/webapp/scss/main.scss
@@ -31,5 +31,12 @@ section {
   width: 100%;
 }
 
+.profile-picture {
+  border-radius: 50%;
+  -webkit-filter: saturate(80%) sepia(20%) hue-rotate(0deg); 
+  filter: saturate(80%) sepia(20%) hue-rotate(0deg); 
+}
+
+
 
 
