--- a/webapp/scss/_firstimpression.scss
+++ b/webapp/scss/_firstimpression.scss
@@ -43,6 +43,8 @@ $first-impression-dimension: 52.5%;
     background: transparent;
     border: 1px solid colors.$secondary-color;
     color: colors.$secondary-color;
+    text-decoration: none;
+    text-align: center;
 
     &:active {
       background: colors.$secondary-color;
