--- a/webapp/scss/_firstimpression.scss
+++ b/webapp/scss/_firstimpression.scss
@@ -9,6 +9,7 @@ $first-impression-dimension: 52.5%;
   align-items: center;
   background: colors.$primary-color;
   color: colors.$secondary-color;
+  margin-top: 65px;
 
   #profilePicture1 {
     width: 48%;
