feat(first_impression): add margin-bottom to #quote

--- a/webapp/scss/_firstimpression.scss
+++ b/webapp/scss/_firstimpression.scss
@@ -60,5 +60,6 @@ $first-impression-dimension: 52.5%;
     text-align: center;
     font-size: 0.87rem;
     font-size: 3.4vw;
+    margin-bottom: 32px;
   }
 }
