feat(cases): add cases list

--- a/webapp/scss/main.scss
+++ b/webapp/scss/main.scss
@@ -3,6 +3,7 @@
 @use 'menu';
 @use 'firstimpression';
 @use 'about';
+@use 'cases';
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 
