--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -239,6 +239,50 @@
   font-size: 3.4vw;
 }
 
+#casesSection {
+  padding-top: 8%;
+  background: #f7f7ff;
+}
+
+#casesList {
+  display: flex;
+  padding: 0 16px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+#casesList .case {
+  position: relative;
+  width: 100%;
+  height: 128px;
+  overflow: hidden;
+  margin: 8px;
+}
+#casesList .case img {
+  width: 100%;
+  height: 100%;
+  filter: blur(5px);
+}
+#casesList .case span {
+  position: absolute;
+  left: 50%;
+  top: 0%;
+  transform: translate(-50%, 0%);
+  text-align: center;
+  background: black;
+  opacity: 0.7;
+  color: #f7f7ff;
+  width: 100%;
+  font-size: 0.87rem;
+  font-size: 3.9vw;
+  padding: 5px;
+}
+#casesList .case:active img {
+  filter: none;
+}
+#casesList .case:active span {
+  display: none;
+}
+
 *, body {
   margin: 0;
   padding: 0;
