--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -214,31 +214,6 @@
   height: 52.5%;
 }
 
-.chips-section {
-  margin: 26px 16px 0 16px;
-  font-size: 0.87rem;
-  font-size: 3.9vw;
-}
-.chips-section .chips-title {
-  color: #60656f;
-}
-.chips-section .chips {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-}
-.chips-section .chips span {
-  display: flex;
-  margin: 13px 13px 0px 0;
-  padding: 8px;
-  background: #60656f;
-  border-radius: 24px;
-  color: #f7f7ff;
-  font-size: 0.75rem;
-  font-size: 3.4vw;
-}
-
 #casesSection {
   padding-top: 8%;
   background: #f7f7ff;
@@ -283,6 +258,32 @@
   display: none;
 }
 
+#caseDetailsSection {
+  display: flex;
+  flex-direction: column;
+  padding-top: 10%;
+  background: #f7f7ff;
+}
+#caseDetailsSection img {
+  width: 80%;
+  align-self: center;
+}
+#caseDetailsSection #caseTitle {
+  text-align: center;
+}
+#caseDetailsSection #caseDescription {
+  text-align: justify;
+  margin: 0 16px;
+}
+#caseDetailsSection #contributionsTitle {
+  margin: 26px 16px 0 16px;
+}
+#caseDetailsSection #contributionsList li {
+  margin: 13px 16px;
+  text-align: justify;
+  list-style: none;
+}
+
 *, body {
   margin: 0;
   padding: 0;
@@ -311,6 +312,31 @@ section {
   border-radius: 50%;
   -webkit-filter: saturate(80%) sepia(20%) hue-rotate(0deg);
   filter: saturate(80%) sepia(20%) hue-rotate(0deg);
+}
+
+.chips-section {
+  margin: 26px 16px 0 16px;
+  font-size: 0.87rem;
+  font-size: 3.9vw;
+}
+.chips-section .chips-title {
+  color: #60656f;
+}
+.chips-section .chips {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+}
+.chips-section .chips span {
+  display: flex;
+  margin: 13px 13px 0px 0;
+  padding: 8px;
+  background: #60656f;
+  border-radius: 24px;
+  color: #f7f7ff;
+  font-size: 0.75rem;
+  font-size: 3.4vw;
 }
 
 /*# sourceMappingURL=main.css.map */
