--- a/webapp/scss/main.scss
+++ b/webapp/scss/main.scss
@@ -5,6 +5,7 @@
 @use 'about';
 @use 'cases';
 @use 'casedetails';
+@use 'memoirs';
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 
