--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -230,7 +230,7 @@
   width: 100%;
   height: 128px;
   overflow: hidden;
-  margin: 8px;
+  margin: 8px 0;
 }
 #casesList .case img {
   width: 100%;
