--- a/webapp/scss/_cases.scss
+++ b/webapp/scss/_cases.scss
@@ -16,7 +16,7 @@
     width: 100%;
     height: 128px;
     overflow: hidden;
-    margin: 8px;
+    margin: 8px 0;
 
     img {
       width: 100%;
