--- a/webapp/scss/_memoirs.scss
+++ b/webapp/scss/_memoirs.scss
@@ -36,8 +36,8 @@
     text-align: justify;
 
     a {
-      color: colors.$fourth-color;
-      text-decoration: none;
+      color: colors.$secondary-color;
+      text-decoration: underline;
     }
   }
 
