--- a/webapp/scss/main.scss
+++ b/webapp/scss/main.scss
@@ -6,6 +6,7 @@
 @use 'cases';
 @use 'casedetails';
 @use 'memoirs';
+@use 'contact';
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 
