--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -5,6 +5,9 @@
   display: flex;
   justify-content: space-between;
   z-index: 1;
+  background: black;
+  color: #f7f7ff;
+  padding: 16px;
 }
 #menuNav #language {
   font-weight: 100;
@@ -100,6 +103,38 @@
   font-size: 0.87rem;
 }
 
+@media (min-width: 720px) and (max-width: 1024px) {
+  #menuNav {
+    height: 45px;
+  }
+  #menuNav #language {
+    font-size: 2.2vw;
+  }
+
+  #menuToggle {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+  }
+  #menuToggle span, #menuToggle input {
+    display: none;
+  }
+  #menuToggle #menu {
+    position: static;
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    padding: 0;
+    background: black;
+  }
+  #menuToggle #menu li, #menuToggle #menu a {
+    color: #f7f7ff;
+    font-size: 2.2vw;
+    padding: 0;
+    margin-right: 20px;
+    align-self: center;
+  }
+}
 #firstImpressionSection {
   display: flex;
   flex-direction: column;
@@ -374,12 +409,6 @@ main {
   flex-direction: column;
   align-items: center;
   width: 100%;
-}
-
-nav {
-  background: black;
-  color: #f7f7ff;
-  padding: 16px;
 }
 
 section {
