--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -276,6 +276,42 @@
   height: 52.5%;
 }
 
+@media (min-width: 720px) and (max-width: 1024px) {
+  .title {
+    font-size: 3.6vw;
+  }
+
+  .description {
+    font-size: 2.7vw;
+  }
+
+  #aboutSection {
+    padding-top: 15%;
+  }
+
+  #skillsSubsection .skill {
+    font-size: 2.7vw;
+  }
+  #skillsSubsection .skill img {
+    width: 35%;
+    height: 128px;
+  }
+  #skillsSubsection .skill p {
+    width: 80%;
+  }
+  #skillsSubsection .row:nth-child(2) {
+    margin-top: 8%;
+  }
+
+  #whatAreYouDoingSubsection {
+    margin: 80px 16px;
+  }
+  #whatAreYouDoingSubsection img {
+    margin-top: 26px;
+    width: 35%;
+    height: 35%;
+  }
+}
 #casesSection {
   padding-top: 18%;
   background: #f7f7ff;
